# pytest-cfg-fetcher

./: README.md  pyproject.toml
.github/workflows/: release.yml
pytest-cfg-fetcher/: fetch.py
pytestconfig/: fetch.py
